# bot

./: .dockerignore  .env.example  .gitignore  .mcp_test.json  AGENT_INSTRUCTIONS.md  ANALYSIS-SUMMARY.md  API_REFERENCE.md  ARCHITECTURE.md  BYBIT_API_DOCUMENTATION.md  BYBIT_USER_INFO_IMPLEMENTATION.md  CLAUDE.md  CLAUDE_CONTEXT.md  COMPREHENSIVE-FUNDING-ARBITRAGE-REPORT.md  CURRENT_FEATURE.md  CUsersunpoiWebstormProjectsBOTbackendlogin_response.json  DEPLOYMENT.md  DEPLOYMENT_DOCKER_COMPOSE.md  DEPLOYMENT_GUIDE.md  DOCKER_SETUP.md  FINAL-OPTIMAL-STRATEGY.md  FUNDING-SHORT-STRATEGY-GUIDE.md  FUNDING_INTERVALS.md  FUNDING_RATE_METRICS_ANALYSIS.md  FUNDING_TRACKER_FIX.md  GitVersion.yml  INTEGRATION_GUIDE.md  LEVERAGE_SYNC_VERIFICATION.md  METRICS_QUICK_REFERENCE.md  OPTIMAL-STRATEGY-QUICK-REFERENCE.md  PHASE2_IMPLEMENTATION.md  README.md  REAL-OPTIMAL-STRATEGY.md  SETUP.md  TRADING_SETUP.md  WEBSOCKET_DATA_FLOW.md  docker-compose.deploy.yml  docker-compose.yml  fix-login-route.js  fix-toast-spam.js  temp_mcp_config.json  (+1 more)
backend/: .dockerignore  API_CREDENTIALS_DIAGNOSIS.md  API_TESTING_GUIDE.md  ASSET_INFO_USAGE.md  BINANCE-FUNDING-TRIGGER-GUIDE.md  BINGX_API_ISSUES.md  BINGX_FIX_SUMMARY.md  BINGX_SIGNATURE_ANALYSIS.md  BINGX_SIGNATURE_FIX.md  BYBIT_API_KEYS_IMPLEMENTATION.md  BYBIT_FIXES_SUMMARY.md  BYBIT_TIME_SYNC_FIX.md  BYBIT_WALLET_BALANCE_FIX.md  BYBIT_WALLET_TROUBLESHOOTING.md  CONNECTOR_CACHE_ARCHITECTURE.md  CONNECTOR_CACHE_IMPLEMENTATION_GUIDE.md  CONNECTOR_CACHE_README.md  CREDENTIALS_ENCRYPTION.md  Dockerfile  EXCHANGE_CREDENTIALS.md  EXCHANGE_CREDENTIALS_IMPLEMENTATION.md  FUNDING-ARB-STRATEGY.md  FUNDING-RATE-MECHANICS.md  FUNDING-SHORT-STRATEGY.md  GATEIO_COST_BUFFER_FIX.md  GATEIO_QUANTO_MULTIPLIER_FIX.md  GATEIO_TIMEOUT_FIX.md  GRADUATED_ENTRY_ANALYSIS.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_FIX.md  IMPLEMENTATION_SUMMARY.md  LEVERAGE_SYNC_IMPLEMENTATION.md  LEVERAGE_SYNC_SUMMARY.md  LIQUIDATION_MONITORING_IMPLEMENTATION.md  LIQUIDATION_PROTECTION_SYSTEM.md  PRECISION_ROUNDING_FIX.md  PRICE_MONITORING_IMPLEMENTATION.md  QUANTITY_BALANCING_FIX.md  QUICK_START.md  QUICK_START_EXCHANGE_CREDENTIALS.md  (+250 more)
backups/: .env.backup_20251031_100759  db_backup_20251031_100759.sql
cpp-core/: CMakeLists.txt  Dockerfile
cpp-core/src/: main.cpp
cpp-core/src/connectors/: bybit_connector.cpp  bybit_connector.hpp
cpp-core/src/ipc/: ring_buffer.cpp  ring_buffer.hpp  uds_client.cpp  uds_client.hpp
cpp-core/src/orders/: order_pipeline.cpp  order_pipeline.hpp
cpp-core/src/time/: time_sync.cpp  time_sync.hpp
cpp-core/tests/: order_pipeline_test.cpp  ring_buffer_test.cpp  time_sync_test.cpp  uds_client_test.cpp
docs/: CONFIGURATION_REFERENCE.md  CONFIGURATION_REFERENCE.ru.md  CONFIGURATION_REFERENCE.uk.md  FUNDING_ARBITRAGE.md  QUICK_START.md  QUICK_START.ru.md  QUICK_START.uk.md  USER_SETUP_GUIDE.md  USER_SETUP_GUIDE.ru.md  USER_SETUP_GUIDE.uk.md
examples/: workflow-startup-mvp.md
frontend/: .dockerignore  .fantasticonrc.js  ARCHITECTURE_IMPLEMENTATION_SUMMARY.md  ARCHITECTURE_VISUAL_DIAGRAMS.md  Dockerfile  EXCHANGE_CREDENTIALS_ARCHITECTURE.md  EXCHANGE_CREDENTIALS_MODELS.ts  ICON-FONT-GENERATION.md  IMPLEMENTATION_CHECKLIST.md  README-ICONS.md  SERVICE_INTERFACES.md  SUBSCRIPTION_HIGHLIGHTING_FIX.md  TRADE_HISTORY_INTEGRATION_EXAMPLE.md  TRADING_DASHBOARD_SUMMARY.md  UPDATED_APP_CONFIG.ts  analyze-eslint.js  angular.json  build-errors.txt  build-output.txt  copy-material-icons.js  eslint-output.json  (+15 more)
(+659 files in other folders)
